Port the standalone artifact to fresh Seon